2004-03-21 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b129

	* Changed:  Replaced some includes/requirements of Variables.

2004-03-21 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b128

	* Change: Tweaked add_photos*
		  - Bugfix: Selectboxes for count of inputboxes.
		  - Fixed HTML errors.
		  - Tidied html outout up.
		  - Beatified output.
		  - Some rewordings.

	* Bugfix: config.php was loaded to late in Config Wizard.
		  So the language was set to Browserlanguage everytime.

	* Change: Replaced some includes/requirements of Variables.

2004-03-20  Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b127

	* Change: RFE [ 879339 ] Import image title/description by CSV file
	* Change: Added ability to caption new images based on file datestamps
		Forum topic: Large Imports use file time/date for description

2004-03-18  Chris Kelly <ckdake@users.sf.net> 1.4.3-cvs-b126

	* Change:  More typos thanks to h0bbel.  This version bump
		includes several commits from earlier today.
		
	* Bugfix: Moved code for defining $webserver_user from 
		setup/index.php to setup/config_data.inc. 
		$webserver_user is only used in config_data.inc 
		and previously $webserver_user was undefined at
		execution time in config_data.inc

2004-03-18  Chris Kelly <ckdake@users.sf.net> 1.4.3-cvs-b125

	* Change: Fixed various typos in the config wizard that h0bbel found
		including switching examples from foo.com to example.com


2004-03-18  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b124

	* Change: Make the low-tech slideshow behave the same as the high.
	  A slideshow_length of 0 means "display all."  This difference
	  caused some confusion, because the high-tech worked and the low
	  didn't.

2004-03-18 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b123

	* Bugfix: removed Debug Code.
	  	  Thanks to Chris Kelly for catching this.

	* Change: getEnvLang() returns now NULL instead of FALSE 
		  when gallery couldnt detect language of environment.
