@@ -40,7 +40,7 @@ if (!isset($gallery)) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = '1.4.3-cvs-b129';
+$gallery->version = '1.4.3-cvs-b130';
 $gallery->config_version = 79;
 $gallery->album_version = 27;
 $gallery->user_version = 5;
@@ -69,3 +69,4 @@ if (!isset($modname) && isset($name)) {
 }
 $modversion['securityschema'] = array("$modname::" => '::'); // Permission Component
 ?>
+ 
