@@ -1,3 +1,8 @@
+2004-03-21 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b130
+
+	* Bugfix: Removed lines in slideshow that were sent before header. 
+		  They caused slideshow to display errors when embedded.
+
 2004-03-21 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b129
 
 	* Changed:  Replaced some includes/requirements of Variables.
